# env_files

./: .agignore  .aliasrc  .bash_aliases  .bashrc  .clang_complete  .environment  .gitconfig  .gitignore  .gitmodules  .myvirtenvrc  .myvirtenvrc.zsh  .rgignore  .ripgreprc  .tmux-snapshot  .tmux.conf  .vimrc  .zsh_history  .zshrc  README.md  aptlist_installed_laptop.txt  ayu-custom-color-theme.json  ayu-dark-custom.json  build_opencv.sh  cheat.sh  cmake_opencv_flags.sh  full-offline.txt  fzf.zsh  gruvbox-dark-hard-custom.json  importing.py  init.coffee  init.evcxr  init.vim  install_ros.zsh  kb-cmds  keybindings.json  keymap.cson  launch.json  offline_sites.txt  okular_custom_shortcuts  robbyrussell.zsh-theme  (+9 more)
.vim/: .netrwhist
apt/: sources.list.save  trusted.gpg  trusted.gpg~
atom_desktop/: config.cson  init.coffee  keymap.cson
atom_laptop/: config.cson  styles.less
config/: paru.conf  yay-config.json
fzf/: .fzf.zsh
i3/: config  config_mat  config_new
migrating/: apt_installed.txt  requirements-3.6.txt  requirements-3.8.txt
oh-my-zsh/: seth-pygmalion.zsh-theme  tmux-seth.plugin.zsh  virtualenv-seth.plugin.zsh
opencv_helpers/: CMakeLists.txt  check_cmd.sh  cmake_opencv_flags.sh  cvflags.sh  export_vars.zsh  opencv_arch_buildinfo.txt  opencv_build.sh  opencv_cmake_flags.sh  opencv_version  opencv_version.cpp
printers/: cv_imshow.py  cvplot.py  eigen_printer3.py  eigen_printer3.py.bak  printers3.py
ranger/: bookmarks  commands.py  history  rc.conf  rifle.conf  scope.sh  tagged
scripts/: angle.py  features.py  machine-id-2020.py  planner-extract.sh  (+10 more)
(+123 files in other folders)
